...
                android:name="saveMode"
                app:argType="boolean"
                android:defaultValue="false" />
        </action>
        <action
            android:id="@+id/actionMainMenuToGame"
            app:destination="@id/gameFragment" />
    </fragment>

    <!-- Game Canvas Fragment (using old game logic) -->
    <fragment
        android:id="@+id/gameCanvasFragment"
        android:name="roboyard.eclabs.ui.GameCanvasFragment"
...
